# NCSU

./: README.md
506/Project2/: cache.cc  readme.docx
506/Project2/__MACOSX/: ._README.md  ._src
506/Project2/src/: Makefile  cache.cc  main.cc  project1_report.docx  results.xlsx  smp_cache
506/Project2/trace/: test.debug
506/pro1/ref/: README.md
506/pro1/ref/src/: main.c  (+1 more)
506/pro1/test/: a.out  test.cpp  test1.cpp  test2.cpp
563/: a.out  test.cpp
563/Project_1/references/ece563-project1-master/testcases/: CMakeLists.txt  Makefile  testcase1.cc  testcase2.cc  testcase3.cc  testcase4.cc  testcase5.cc  testcase6.cc  testcase_fp0.cc  testcase_fp1.cc  testcase_fp1.out  testcase_fp2.cc  testcase_fp3.cc  testcase_fp3.out  testcase_fp4.cc  testcase_fp5.cc
563/Project_3/project3_code/: Makefile  a.out  cache.cc  cache.h  trace_generator.cc  trace_result.xlsx
564/Project_demo/: Control.v  ece564_project_tb_top.v  env.do  message1_result_ece464.txt  message27_result_ece464.txt  message55_result.txt  message55_result_ece464.txt  result_0.txt  result_1.txt  transcript  vsim.wlf  zwang79_ece564_project_tb.v
564/Project_demo/mti_lib/: _info  _lib.qdb  _lib1_3.qdb  _lib1_3.qpg  _lib1_3.qtl
564/Project_final/: sketch.odg
564/Project_opt2/: CompileAnalyze.tcl~  Constraints.tcl  Control.v  H.v  M.v  MyDesign.v  MyDesign_final.v  MyDesign_init.v  area_report.rpt  cell_report_final.rpt  default.svf  read.tcl  result_1.txt  setup.tcl  setup.tcl~  tb_top.v  timing_max_slow.rpt  timing_max_slow_holdfixed_test.rpt  timing_min_fast_holdcheck_test.rpt  transcript  vsim.wlf
(+3731 files in other folders)
