cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -Werror")
include_directories(../src)
include_directories(../asm)

add_executable(testcase1 testcase1.cc)
target_link_libraries(testcase1 src)
add_executable(testcase2 testcase2.cc)
target_link_libraries(testcase2 src)
add_executable(testcase3 testcase3.cc)
target_link_libraries(testcase3 src)
add_executable(testcase4 testcase4.cc)
target_link_libraries(testcase4 src)
add_executable(testcase5 testcase5.cc)
target_link_libraries(testcase5 src)
add_executable(testcase6 testcase6.cc)
target_link_libraries(testcase6 src)
add_executable(testcase0fp testcase_fp0.cc)
target_link_libraries(testcase0fp src)
add_executable(testcase1fp testcase_fp1.cc)
target_link_libraries(testcase1fp src)
add_executable(testcase2fp testcase_fp2.cc)
target_link_libraries(testcase2fp src)
add_executable(testcase3fp testcase_fp3.cc)
target_link_libraries(testcase3fp src)
add_executable(testcase4fp testcase_fp4.cc)
target_link_libraries(testcase4fp src)
add_executable(testcase5fp testcase_fp5.cc)
target_link_libraries(testcase5fp src)
